@@ -34,6 +34,15 @@ sha1::64:20
 #dss::1024
 
 #
+# Run SILC server as specific user and group. The server must be initially
+# run as root.
+#
+# Format: <user>:<group>
+#
+[Identity]
+nobody:nobody
+
+#
 # Server's administrative information.
 #
 # Format: <location>:<server type>:<admin's name>:<admin's email address>
